Завершаем подготовку адаптивной графики

--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -4,11 +4,10 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 46px;
-    padding-bottom: 28px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 64px 0 19px;
+    padding-top: 64px;
   }
 }
 
@@ -130,18 +129,4 @@
   font-style: normal;
   line-height: 30px;
   color: @purple-red;
-}
-
-.contacts__iframe {
-  width: 100%;
-  border: none;
-  height: 200px;
-
-  @media (min-width: @tablet-width) {
-    height: 374px;
-  }
-
-  @media (min-width: @desktop-width) {
-    height: 502px;
-  }
 }
