--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -70,16 +70,28 @@
   background-repeat: no-repeat;
   cursor: pointer;
 
+  @media (min-resolution: 1.5dppx) {
+    background-image: url("../../img/photo-road-mobile@2x.jpg");
+  }
+
   @media (min-width: @tablet-width) {
     margin-top: 16px;
     width: 300px;
     height: 400px;
     background-image: url("../../img/photo-road-tablet@1x.jpg");
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../../img/photo-road-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: @desktop-width) {
     margin-left: 0;
     background-image: url("../../img/photo-road-desktop@1x.jpg");
+
+    @media (min-resolution: 1.5dppx) {
+      background-image: url("../../img/photo-road-desktop@2x.jpg");
+    }
   }
 }
 
@@ -122,7 +134,6 @@
 .filter-photo__icon {
   display: block;
   fill: fade(@blue-dark, 30%);
-  pointer-events: none;
 
   &--crop {
     @media (min-width: @tablet-width) {
@@ -195,7 +206,7 @@
   border: 0;
   background-color: transparent;
 
-  &--current .filter-photo__icon {
+  &--current svg {
     fill: @purple-red;
   }
 }
