--- a/source/less/blocks/filter.less
+++ b/source/less/blocks/filter.less
@@ -170,6 +170,14 @@
       height: 32px;
     }
   }
+
+  &:hover {
+    fill: fade(@blue-dark, 50%);
+  }
+
+  &:active {
+    fill: fade(@blue-dark, 30%);
+  }
 }
 
 .filter-photo__icon-wrapper {
@@ -191,6 +199,14 @@
 
   & .filter-photo__icon {
     fill: @purple-red;
+  }
+
+  & .filter-photo__icon:hover {
+    fill: fade(@blue-dark, 50%);
+  }
+
+  & .filter-photo__icon:active {
+    fill: fade(@blue-dark, 30%);
   }
 }
 
