--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -4,11 +4,12 @@
   height: 200px;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 3px;
     height: 374px;
   }
 
   @media (min-width: @desktop-width) {
-    height: 396px;
+    height: 512px;
   }
 
   &::before {
@@ -50,6 +51,7 @@
   @media (min-width: @desktop-width) {
     top: -10%;
     width: 1200px;
+    height: 512px;
   }
 }
 
@@ -88,6 +90,6 @@
   }
 
   @media (min-width: @desktop-width) {
-    height: 502px;
+    height: 512px;
   }
 }
