--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,5 +1,5 @@
 .price {
-  padding-top: 97px;
+  padding-top: 104px;
   padding-bottom: 32px;
   background-color: @gray-light;
   background-image: url("../../img/bg-triangle-white.svg");
@@ -8,16 +8,15 @@
   background-repeat: no-repeat;
 
   @media (min-width: @tablet-width) {
-    padding-top: 86px;
-    padding-bottom: 69px;
-
+    padding-top: 106px;
+    padding-bottom: 0;
     background-size: 101% auto;
     background-position: 50% 0;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 150px;
-    padding-bottom: 95px;
+    padding-bottom: 30px;
 
     background-size: 101% auto;
     background-position: 50% 0;
