--- a/source/less/blocks/reviews-nav.less
+++ b/source/less/blocks/reviews-nav.less
@@ -50,11 +50,13 @@
   }
 
   &--prev::before {
+    top: 6px;
     left: 7px;
     transform: translateY(-50%) rotate(225deg);
   }
 
   &--next::before {
+    top: 6px;
     right: 7px;
     transform: translateY(-50%) rotate(45deg);
   }
