--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,17 +1,17 @@
 .reviews {
   position: relative;
-  padding-top: 29px;
-  padding-bottom: 29px;
+  padding-top: 27px;
+  padding-bottom: 22px;
   text-align: center;
 
   @media (min-width: @tablet-width) {
     padding-top: 24px;
-    padding-bottom: 24px;
+    padding-bottom: 13px;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 185px;
-    padding-bottom: 40px;
+    padding-bottom: 0;
 
     background-image: url("../../img/icon-quotes.svg");
     background-repeat: no-repeat;
