--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -29,6 +29,7 @@
   color: @black;
 
   @media (min-width: @desktop-width) {
+    margin-top: 17px;
     margin-bottom: 24px;
     font-style: normal;
     font-weight: 700;
@@ -42,11 +43,11 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
-  padding: 53px 20px 290px;
+  padding: 28px 20px 290px;
 
   background-image: url("../../img/iphone-screen-mobile@1x.png");
   background-size: 157px 320px;
-  background-position: 50% ~"calc(100% + 44px)";
+  background-position: 50% ~"calc(100% + 42px)";
   background-repeat: no-repeat;
   background-color: @gray-light;
 
@@ -59,12 +60,12 @@
   @media (min-width: @tablet-width) {
     flex-direction: column;
     align-items: flex-end;
-    padding: 55px 20px 27px;
+    padding: 67px 20px 0;
     width: 620px;
 
     background-image: url("../../img/iphone-screen-3-tablet@1x.png");
-    background-size: 268px 547px;
-    background-position: 20px 3px;
+    background-size: 268px 485px;
+    background-position: 0 0;
     background-color: transparent;
 
     @media (min-resolution: 1.5dppx) {
@@ -83,7 +84,7 @@
 }
 
 .advantages__item {
-  margin-bottom: 13px;
+  margin-bottom: 31px;
   width: 280px;
   text-align: center;
   background-position: 50% 0;
@@ -91,13 +92,14 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
-    padding-left: 18px;
-    width: 310px;
+    padding-left: 30px;
+    width: 322px;
     text-align: left;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 339px;
+    padding-left: 0;
     width: 252px;
     line-height: 30px;
     text-align: center;
@@ -116,7 +118,12 @@
   }
 
   &--second {
+    @media (min-width: @tablet-width) {
+      margin-top: 19px;
+    }
+
     @media (min-width: @desktop-width) {
+      margin-top: 0;
       background-image: url("../../img/iphone-screen-2-desktop@1x.png");
 
       @media (min-resolution: 1.5dppx) {
@@ -126,7 +133,15 @@
   }
 
   &--third {
+    @media (min-width: @tablet-width) {
+      margin-top: 16px;
+    }
+
     @media (min-width: @desktop-width) {
+      .advantages__title {
+        margin: 17px 10px 24px;
+      }
+      margin-top: 0;
       background-image: url("../../img/iphone-screen-3-desktop@1x.png");
 
       @media (min-resolution: 1.5dppx) {
@@ -151,6 +166,10 @@
   }
 
   @media (min-width: @desktop-width) {
+    &:nth-child(2) {
+      margin: 12px 7px 16px;
+    }
+
     font-size: 18px;
     font-weight: normal;
     line-height: 30px;
