--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -3,13 +3,14 @@
   width: 320px;
 
   background-image: url("../../img/iphone-hand-mobile@1x.png");
-  background-position: 0 110px;
-  background-size: 320px 286px;
+  background-position: 0 109px;
+  background-size: 259px 287px;
   background-repeat: no-repeat;
 
   @media (min-resolution: 1.5dppx) {
     background-image: url("../../img/iphone-hand-mobile@2x.png");
-    background-size: 270px 286px;
+    background-size: 259px 287px;
+    background-position: 0 109px;
   }
 
   @media (min-width: @tablet-width) {
@@ -19,8 +20,8 @@
     width: 640px;
 
     background-image: url("../../img/iphone-hand-tablet@1x.png");
-    background-position: -3px 73px;
-    background-size: 660px 545px;
+    background-position: -24px 73px;
+    background-size: 690px 545px;
 
     @media (min-resolution: 1.5dppx) {
       background-image: url("../../img/iphone-hand-tablet@2x.png");
@@ -28,10 +29,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding: 108px 10px 86px;
+    padding: 100px 10px 124px;
     width: 940px;
     background-image: url("../../img/iphone-hand-desktop@1x.png");
-    background-position: 26px 99px;
+    background-position: 17px 99px;
     background-size: 1050px 645px;
 
     @media (min-resolution: 1.5dppx) {
@@ -47,7 +48,7 @@
 }
 
 .download__title {
-  padding: 0 30px;
+  padding: 0 20px;
 
   font-weight: 300;
   font-size: 24px;
@@ -59,18 +60,20 @@
     display: block;
     margin-top: 0;
     margin-bottom: 31px;
+    padding: 0 30px;
     font-size: 40px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 52px;
+    margin-bottom: 37px;
+    padding-left: 10px;
     font-size: 50px;
     line-height: 68px;
   }
 }
 
 .download__main-button {
-  margin-top: 346px;
+  margin-top: 344px;
   color: @white;
 
   @media (min-width: @tablet-width) {
@@ -96,17 +99,18 @@
   display: flex;
   justify-content: center;
   .list ();
-  margin-top: 38px;
+  margin-top: 42px;
   margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 57px;
+    margin-top: 56px;
     margin-bottom: 33px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 67px;
-    margin-bottom: 56px;
+    margin-top: 80px;
+    margin-bottom: 51px;
+    margin-right: 22px;
   }
 }
 
