--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -38,6 +38,7 @@
 
 .page-footer__copyright-text {
   margin-right: 14px;
+  margin-top: 9px;
   line-height: 18px;
 
   @media (min-width: @desktop-width) {
@@ -50,7 +51,7 @@
   display: block;
   fill: @purple-red;
   width: 27px;
-  height: 34px;
+  height: 40px;
 
   &:hover {
     fill: @blue-dark;
