--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -4,7 +4,7 @@
 
   background-color: @blue-dark;
   background-image: url("../../img/bg-back-mobile@1x.jpg");
-  background-position: 50% 259px;
+  background-position: 50% 170px;
   background-repeat: no-repeat;
 
   @media (min-resolution: 1.5dppx) {
@@ -14,7 +14,7 @@
 
   @media (min-width: @tablet-width) {
     background-image: url("../../img/bg-back-tablet@1x.jpg");
-    background-position: 50% 256px;
+    background-position: 50% 255px;
 
     @media (min-resolution: 1.5dppx) {
       background-image: url("../../img/bg-back-tablet@2x.jpg");
@@ -28,7 +28,7 @@
 
     @media (min-resolution: 1.5dppx) {
       background-image: url("../../img/bg-back-desktop@2x.jpg");
-      background-position: 50% 10px;
+      background-position: 50% 0;
     }
   }
 }
