--- a/source/less/blocks/photo-list.less
+++ b/source/less/blocks/photo-list.less
@@ -35,6 +35,10 @@
     margin: 0 0 20px 0;
   }
 
+  @media (min-width: @desktop-width) {
+    margin: 0 0 50px 0;
+  }
+
   &--of-the-day {
     position: relative;
     overflow: hidden;
@@ -57,11 +61,16 @@
   display: block;
   max-width: 100%;
   height: auto;
+
+  @media (min-width: @tablet-width) {
+    height: 509px;
+  }
 }
 
 .photo-list__quote {
   box-sizing: border-box;
-  padding: 18px 17px 21px;
+  padding: 17px 0 21px;
+  padding-left: 16px;
   background-color: @gray-light;
 
   @media (min-width: @tablet-width) {
@@ -77,7 +86,7 @@
     @media (min-width: @tablet-width) {
       flex-flow: row wrap;
       justify-content: space-between;
-      padding: 24px 29px 13px 27px;
+      padding: 22px 29px 13px 27px;
       width: 620px;
     }
 
