--- a/source/less/blocks/contest.less
+++ b/source/less/blocks/contest.less
@@ -535,6 +535,10 @@
   line-height: 30px;
   cursor: pointer;
 
+  @media (min-width: @mobile-width) {
+    padding-left: 69px;
+  }
+
   @media (min-width: @tablet-width) {
     padding-left: 59px;
   }
