исправление неточностей в разметке

--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -39,6 +39,11 @@
     color: fade(@white, 30%);
   }
 
+  &--disabled {
+    color: @white;
+    background-color: @gray;
+  }
+
   &--circle {
     padding: 15px;
     line-height: 18px;
