Исправление по критерию б5. Корректировка index.html по БЭМ

--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -50,3 +50,12 @@
     transform: none;
   }
 }
+
+.price__slider-controls {
+  margin-top: 44px;
+  margin-bottom: 15px;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
