--- a/source/less/blocks/picture.less
+++ b/source/less/blocks/picture.less
@@ -10,21 +10,7 @@
     overflow: hidden;
     margin: 0 auto;
     width: 100%;
-    max-width: 320px;
-
-    @media (min-width: @tablet-width) {
-      width: 100%;
-      max-width: 660px;
-    }
-
-    @media (min-width: @desktop-width) {
-      width: 100%;
-      max-width: 1200px;
-    }
-
-    @media (min-width: 1350px) {
-      width: 100%;
-    }
+    min-width: 100%;
   }
 }
 
@@ -49,16 +35,16 @@
   &--of-the-day {
     position: relative;
     left: 0;
-    min-width: 320px;
+    min-width: 100%;
     height: 137px;
 
     @media (min-width: @tablet-width) {
-      min-width: 660px;
+      min-width: 100%;
       height: 509px;
     }
 
     @media (min-width: @desktop-width) {
-      min-width: 1200px;
+      min-width: 100%;
       height: 506px;
     }
 
@@ -86,4 +72,120 @@
       }
     }
   }
+}
+
+.picture__image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+
+  @media (min-width: @tablet-width) {
+    height: 509px;
+  }
+}
+
+.picture__quote {
+  box-sizing: border-box;
+  padding: 17px 0 19px;
+  padding-left: 16px;
+  background-color: @gray-light;
+
+  @media (min-width: @tablet-width) {
+    padding: 23px 32px 24px 27px;
+  }
+
+  &--of-the-day {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 280px;
+
+    @media (min-width: @tablet-width) {
+      flex-flow: row wrap;
+      justify-content: space-between;
+      padding: 22px 29px 13px 27px;
+      width: 620px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 24px 32px 12px 27px;
+      width: 940px;
+    }
+  }
+}
+
+.picture__author {
+  margin: 0;
+}
+
+.picture__title {
+  font-weight: 700;
+  font-style: normal;
+}
+
+.picture__date,
+.picture__likes {
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.picture__date {
+  font-weight: 300;
+}
+
+.picture__text {
+  margin-top: 0;
+  margin-bottom: 12px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 12px;
+    min-height: 48px;
+  }
+
+  &--of-the-day {
+    @media (min-width: @tablet-width) {
+      order: 2;
+      min-height: auto;
+    }
+  }
+}
+
+.picture__likes-wrapper {
+  display: flex;
+  align-items: center;
+  margin-top: auto;
+
+  @media (min-width: @tablet-width) {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  &--of-the-day {
+    @media (min-width: @tablet-width) {
+      order: 1;
+    }
+  }
+}
+
+.picture__likes {
+  margin-left: 19px;
+  color: @purple-red;
+
+  @media (min-width: @tablet-width) {
+    margin-left: 0;
+    margin-right: 17px;
+  }
+}
+
+.picture__button {
+  display: block;
+  padding: 0;
+  width: 13px;
+  height: 12px;
+  border: 0;
+  background-color: transparent;
+  background-image: url("../../img/icon-heart.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  cursor: pointer;
 }
