--- a/source/less/blocks/picture.less
+++ b/source/less/blocks/picture.less
@@ -36,16 +36,16 @@
     position: relative;
     left: 0;
     min-width: 100%;
-    height: 137px;
+    height: auto;
 
     @media (min-width: @tablet-width) {
       min-width: 100%;
-      height: 509px;
+      height: auto;
     }
 
     @media (min-width: @desktop-width) {
       min-width: 100%;
-      height: 506px;
+      height: auto;
     }
 
     &::before {
